[package]
name = "ministd"
version = "0.1.0"
edition = "2024"


[dependencies]
allocator={ path="src/allocator" }
hashbrown = "0.15.4"
static_assertions = "1.1.0"
proc_macro={ path="src/proc_macro" }
renderer={ path="renderer" }
spin = "0.10.0"

[features]
default=["all"]
all=["vector", "string", "box", "allocator",
    "renderer", "default-renderer", "rc",
    "hashmap", "spin"]
vector=[]
string=[]
box=[]
allocator=[]
renderer=[]
default-renderer=[]
rc=[]
spin=[]
hashmap=[]
testing=[]


